--- a/Hamster/Hamster.csproj
+++ b/Hamster/Hamster.csproj
@@ -9,21 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0-1.final" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0-preview.2.23128.3" />
-    <PackageReference Include="MySql.Data" Version="8.0.32.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview1.23109.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0-preview.3.23174.2" />
+    <PackageReference Include="MySql.Data" Version="8.0.33" />
     <PackageReference Include="Npgsql" Version="8.0.0-preview.2" />
-    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.90" />
-    <PackageReference Include="YamlDotNet" Version="13.0.2" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.100" />
+    <PackageReference Include="YamlDotNet" Version="13.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Hamster.Core">
-      <HintPath>..\..\Hamster.Core\Hamster.Core\bin\Release\net7.0\Hamster.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <ProjectReference Include="..\Hamster.Core\Hamster.Core.csproj" />
   </ItemGroup>
 
 </Project>
