--- a/Hamster/Properties/launchSettings.json
+++ b/Hamster/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "KDWebServer": {
       "commandName": "Project",
-      "commandLineArgs": "--help"
+      "commandLineArgs": "--debug"
     }
   }
 }
