--- a/Hamster.Core/Hamster.Core.csproj
+++ b/Hamster.Core/Hamster.Core.csproj
@@ -7,4 +7,8 @@
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MimeMapping" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
