--- a/Hamster.Core/Hamster.Core.csproj
+++ b/Hamster.Core/Hamster.Core.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MimeMapping" Version="2.0.0" />
+    <PackageReference Include="System.IO.Pipelines" Version="8.0.0-preview.3.23174.8" />
   </ItemGroup>
 
 </Project>
