--- a/Hamster/Properties/launchSettings.json
+++ b/Hamster/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "KDWebServer": {
+    "Hamster": {
       "commandName": "Project",
       "commandLineArgs": "--debug"
     }
