--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -9,9 +9,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -25,17 +23,17 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish_Win_x86
-      run: dotnet publish -p:PublishProfile=win-x86
+      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-x86.pubxml
     - name: Publish_Win_x64
-      run: dotnet publish -p:PublishProfile=win-x64
+      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-x64.pubxml
     - name: Publish_Win_arm
-      run: dotnet publish -p:PublishProfile=win-arm
+      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-arm.pubxml
     - name: Publish_Win_arm64
-      run: dotnet publish -p:PublishProfile=win-arm64
+      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-arm64.pubxml
     - name: Publish_Linux_x64
-      run: dotnet publish -p:PublishProfile=linux-x64
+      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/linux-x64.pubxml
     - name: Publish_Linux_arm
-      run: dotnet publish -p:PublishProfile=linux-arm
+      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/linux-arm.pubxml
     - name: Publish_Linux_arm64
-      run: dotnet publish -p:PublishProfile=linux-arm64
+      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/linux-arm64.pubxml
     
