--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -23,17 +23,17 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish_Win_x86
-      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-x86.pubxml
+      run: dotnet publish Hamster -p:PublishProfile=win-x86
     - name: Publish_Win_x64
-      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-x64.pubxml
+      run: dotnet publish Hamster -p:PublishProfile=win-x64
     - name: Publish_Win_arm
-      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-arm.pubxml
+      run: dotnet publish -p:PublishProfile=./Hamster/Properties/PublishProfiles/win-arm.pubxml
     - name: Publish_Win_arm64
-      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/win-arm64.pubxml
+      run: dotnet publish -p:PublishProfile=./Hamster/Properties/PublishProfiles/win-arm64.pubxml
     - name: Publish_Linux_x64
-      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/linux-x64.pubxml
+      run: dotnet publish -p:PublishProfile=./Hamster/Properties/PublishProfiles/linux-x64.pubxml
     - name: Publish_Linux_arm
-      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/linux-arm.pubxml
+      run: dotnet publish -p:PublishProfile=./Hamster/Properties/PublishProfiles/linux-arm.pubxml
     - name: Publish_Linux_arm64
-      run: dotnet publish -p:PublishProfile=Hamster/Properties/PublishProfiles/linux-arm64.pubxml
+      run: dotnet publish -p:PublishProfile=./Hamster/Properties/PublishProfiles/linux-arm64.pubxml
     
