--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish_Win_x86
-      run: dotnet publish Hamster -p:PublishProfile=win-x86
+      run: dotnet publish Hamster -p:PublishProfile=/home/runner/work/HamsterFramework/HamsterFramework/Hamster/Properties/PublishProfiles/win-x86.pubxml
     - name: Publish_Win_x64
-      run: dotnet publish Hamster -p:PublishProfile=win-x64
+      run: dotnet publish Hamster -p:PublishProfile=/home/runner/work/HamsterFramework/HamsterFramework/Hamster/Properties/PublishProfiles/win-x64.pubxml
     - name: Publish_Win_arm
-      run: dotnet publish Hamster -p:PublishProfile=./Hamster/Properties/PublishProfiles/win-arma.pubxml
+      run: dotnet publish Hamster -p:PublishProfile=./Hamster/Properties/PublishProfiles/win-arm.pubxml
     - name: Publish_Win_arm64
       run: dotnet publish Hamster -p:PublishProfile=./Hamster/Properties/PublishProfiles/win-arm64.pubxml
     - name: Publish_Linux_x64
