--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -26,23 +26,23 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       
     - name: Publish_Win_x86
-      run: dotnet publish Hamster -p:Configuration=Release -p:SelfContained=true -p:PublishDir=publish/win-x86/ -p:RuntimeIdentifier=win-x86
+      run: cd Hamster && dotnet publish -p:PublishProfile=win-x86
       
     - name: Publish_Win_x64
-      run: dotnet publish Hamster -p:Configuration=Release -p:SelfContained=true -p:PublishDir=publish/win-x64/ -p:RuntimeIdentifier=win-x64
+      run: cd Hamster && dotnet publish -p:PublishProfile=win-x64
       
     - name: Publish_Win_arm
-      run: dotnet publish Hamster -p:Configuration=Release -p:SelfContained=true -p:PublishDir=publish/win-arm/ -p:RuntimeIdentifier=win-arm
+      run: cd Hamster && dotnet publish -p:PublishProfile=win-arm
       
     - name: Publish_Win_arm64
-      run: dotnet publish Hamster -p:Configuration=Release -p:SelfContained=true -p:PublishDir=publish/win-arm64/ -p:RuntimeIdentifier=win-arm64
+      run: cd Hamster && dotnet publish -p:PublishProfile=win-arm64
       
     - name: Publish_Linux_x64
-      run: dotnet publish Hamster -p:Configuration=Release -p:SelfContained=true -p:PublishDir=publish/linux-x64/ -p:RuntimeIdentifier=linux-x64
+      run: cd Hamster && dotnet publish -p:PublishProfile=linux-x64
       
     - name: Publish_Linux_arm
-      run: dotnet publish Hamster -p:Configuration=Release -p:SelfContained=true -p:PublishDir=publish/linux-arm/ -p:RuntimeIdentifier=linux-arm
+      run: cd Hamster && dotnet publish -p:PublishProfile=linux-arm
       
     - name: Publish_Linux_arm64
-      run: dotnet publish Hamster -p:Configuration=Release -p:SelfContained=true -p:PublishDir=publish/linux-arm64/ -p:RuntimeIdentifier=linux-arm64
+      run: cd Hamster && dotnet publish -p:PublishProfile=linux-arm64
     
