--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,13 +18,22 @@ jobs:
         dotnet-version: 7.0.x
     - name: Restore dependencies
       run: dotnet restore
-      
     - name: Build
       run: dotnet build --no-restore
-      
     - name: Test
       run: dotnet test --no-build --verbosity normal
       
+  Publish:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.0.x
+    
+    - name: ls
+      run: ls
     - name: Publish_Win_x86
       run: cd Hamster && dotnet publish -p:PublishProfile=win-x86
       
