--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -32,26 +32,38 @@ jobs:
       with:
         dotnet-version: 7.0.x
     
-    - name: ls
-      run: ls
     - name: Publish_Win_x86
-      run: cd Hamster && dotnet publish -p:PublishProfile=win-x86
+      run: |
+        cd Hamster
+        dotnet publish -p:PublishProfile=win-x86
       
     - name: Publish_Win_x64
-      run: cd Hamster && dotnet publish -p:PublishProfile=win-x64
+      run: |
+        cd Hamster
+        dotnet publish -p:PublishProfile=win-x64
       
     - name: Publish_Win_arm
-      run: cd Hamster && dotnet publish -p:PublishProfile=win-arm
+      run: |
+       cd Hamster
+       dotnet publish -p:PublishProfile=win-arm
       
     - name: Publish_Win_arm64
-      run: cd Hamster && dotnet publish -p:PublishProfile=win-arm64
+      run: |
+        cd Hamster
+        dotnet publish -p:PublishProfile=win-arm64
       
     - name: Publish_Linux_x64
-      run: cd Hamster && dotnet publish -p:PublishProfile=linux-x64
+      run: |
+        cd Hamster
+        dotnet publish -p:PublishProfile=linux-x64
       
     - name: Publish_Linux_arm
-      run: cd Hamster && dotnet publish -p:PublishProfile=linux-arm
+      run: |
+        cd Hamster
+        dotnet publish -p:PublishProfile=linux-arm
       
     - name: Publish_Linux_arm64
-      run: cd Hamster && dotnet publish -p:PublishProfile=linux-arm64
+      run: |
+        cd Hamster
+        dotnet publish -p:PublishProfile=linux-arm64
     
