--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -36,55 +36,57 @@ jobs:
     
     - name: Publish_Win_x86
       run: |
-        cd Hamster
+        ls
+        cd ./Hamster
+        ls
         dotnet publish -p:PublishProfile=win-x86
-        zip -r win-x86.zip bin/Release/net7.0/publish/win-x86/
+        zip -qr win-x86.zip bin/Release/net7.0/publish/win-x86/
       
     - name: Publish_Win_x64
       run: |
-        cd Hamster
+        cd ./Hamster
         dotnet publish -p:PublishProfile=win-x64
-        zip -r win-x64.zip bin/Release/net7.0/publish/win-x64/
+        zip -qr win-x64.zip bin/Release/net7.0/publish/win-x64/
       
     - name: Publish_Win_arm
       run: |
-       cd Hamster
+       cd ./Hamster
        dotnet publish -p:PublishProfile=win-arm
-       zip -r win-arm.zip bin/Release/net7.0/publish/win-arm/
+       zip -qr win-arm.zip bin/Release/net7.0/publish/win-arm/
       
     - name: Publish_Win_arm64
       run: |
-        cd Hamster
+        cd ./Hamster
         dotnet publish -p:PublishProfile=win-arm64
-        zip -r win-arm64.zip bin/Release/net7.0/publish/win-arm64/
+        zip -qr win-arm64.zip bin/Release/net7.0/publish/win-arm64/
       
     - name: Publish_Linux_x64
       run: |
-        cd Hamster
+        cd ./Hamster
         dotnet publish -p:PublishProfile=linux-x64
-        zip -r linux-x64.zip bin/Release/net7.0/publish/linux-x64/
+        zip -qr linux-x64.zip bin/Release/net7.0/publish/linux-x64/
       
     - name: Publish_Linux_arm
       run: |
-        cd Hamster
+        cd ./Hamster
         dotnet publish -p:PublishProfile=linux-arm
-        zip -r linux-arm.zip bin/Release/net7.0/publish/linux-arm/
+        zip -qr linux-arm.zip bin/Release/net7.0/publish/linux-arm/
       
     - name: Publish_Linux_arm64
       run: |
-        cd Hamster
+        cd ./Hamster
         dotnet publish -p:PublishProfile=linux-arm64
-        zip -r linux-arm64.zip bin/Release/net7.0/publish/linux-arm64/
+        zip -qr linux-arm64.zip bin/Release/net7.0/publish/linux-arm64/
     
     - name: List files
       run: |
-        cd
+        cd ./Hamster
         ls
     - name: Create release
       uses: svenstaro/upload-release-action@2.5.0
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file:  Hamster/*.zip
+        repo_token: ${{ secrets.TOKEN }}
+        file:  ./Hamster/*.zip
         tag: ${{ github.ref }}
         release_name: ${{ github.ref }}
         overwrite: true
