--- a/Hamster.Core/Hamster.Core.csproj
+++ b/Hamster.Core/Hamster.Core.csproj
@@ -1,15 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MimeMapping" Version="2.0.0" />
     <PackageReference Include="System.IO.Pipelines" Version="8.0.0-preview.3.23174.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hamster.Utils\Hamster.Utils.csproj" />
   </ItemGroup>
 
 </Project>
