--- a/Hamster.Hotfix/Hamster.Hotfix.csproj
+++ b/Hamster.Hotfix/Hamster.Hotfix.csproj
@@ -1,15 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Hamster.Core\Hamster.Core.csproj" />
     <ProjectReference Include="..\Hamster.Utils\Hamster.Utils.csproj" />
   </ItemGroup>
 
